--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -24,6 +24,9 @@ defaults:
 jobs:
   build_and_test:
 
+    env:
+      TEST_DATABASE: ''
+
     strategy:
       fail-fast: false
       matrix:
@@ -90,17 +93,27 @@ jobs:
         down-flags: --volumes
 
     - name: Configure
-      run: >
-        CC=${{ fromJSON('{"Clang": "clang", "GCC": "gcc"}')[matrix.compiler] }}
-        CXX=${{ fromJSON('{"Clang": "clang++", "GCC": "g++"}')[matrix.compiler] }}
-        cmake -S ${{ github.workspace }}/source -B ${{ github.workspace }}/build
-        -DCMAKE_POLICY_VERSION_MINIMUM=3.5
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DODBC_PROVIDER=${{ matrix.odbc_provider }}
-        -DCH_ODBC_RUNTIME_LINK_STATIC=${{ fromJSON('{"static-runtime": "ON", "dynamic-runtime": "OFF"}')[matrix.runtime_link] }}
-        -DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=${{ fromJSON('{"bundled-third-parties": "ON", "system-third-parties": "OFF"}')[matrix.third_parties] }}
-        -DTEST_DSN_LIST="ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI) ZSTD;ClickHouse DSN (Unicode) ZSTD"
-        -DBUILD_TESTING=YES
+      run: |
+        dsn_list=(
+          "ClickHouse DSN (ANSI)"
+          "ClickHouse DSN (Unicode)"
+          "ClickHouse DSN (ANSI) ZSTD"
+          "ClickHouse DSN (Unicode) ZSTD"
+          "ClickHouse AWS ANSI ZSTD"
+          "ClickHouse AWS Unicode ZSTD"
+        )
+        dsn_string=$(IFS=';'; echo "${dsn_list[*]}")
+
+        CC=${{ fromJSON('{"Clang": "clang", "GCC": "gcc"}')[matrix.compiler] }} \
+        CXX=${{ fromJSON('{"Clang": "clang++", "GCC": "g++"}')[matrix.compiler] }} \
+        cmake -S ${{ github.workspace }}/source -B ${{ github.workspace }}/build \
+          -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+          -DODBC_PROVIDER=${{ matrix.odbc_provider }} \
+          -DCH_ODBC_RUNTIME_LINK_STATIC=${{ fromJSON('{"static-runtime": "ON", "dynamic-runtime": "OFF"}')[matrix.runtime_link] }} \
+          -DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=${{ fromJSON('{"bundled-third-parties": "ON", "system-third-parties": "OFF"}')[matrix.third_parties] }} \
+          -DTEST_DSN_LIST="$dsn_string" \
+          -DBUILD_TESTING=YES
 
 
     - name: Build
@@ -124,6 +137,19 @@ jobs:
     - name: Test - Run C++ unit tests
       working-directory: ${{ github.workspace }}/build
       run: ctest --output-on-failure --build-config ${{ matrix.build_type }} -R '.*-ut.*'
+
+    - name: Create Test Database
+      if: ${{ matrix.build_type == 'Release' }}
+      run: |
+        timestamp=$(date +%s%3N)
+        database="test${timestamp}_odbc"
+        database="test${timestamp}_odbc_linux_${{ matrix.architecture }}_${{ matrix.build_type }}"
+        echo "TEST_DATABASE=$database" >> $GITHUB_ENV
+
+        curl --fail-with-body -X POST \
+          "https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?query=" \
+          -u "default:${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}" \
+          -d "create database $database"
 
     - name: Prepare ODBC ini configs
       run: |
@@ -164,9 +190,10 @@ jobs:
         [ClickHouse DSN (ANSI)]
         Driver        = ClickHouse ODBC Driver (ANSI)
         Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
-        Url           = http://${CLICKHOUSE_SERVER_IP}
+        Url           = http://localhost:8123
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
+        Compression   = 0
 
         [ClickHouse DSN (Unicode)]
         Driver        = ClickHouse ODBC Driver (Unicode)
@@ -174,11 +201,12 @@ jobs:
         Url           = http://localhost:8123
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
+        Compression   = 0
 
         [ClickHouse DSN (ANSI) ZSTD]
         Driver        = ClickHouse ODBC Driver (ANSI)
         Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
-        Url           = http://${CLICKHOUSE_SERVER_IP}
+        Url           = http://localhost:8123
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
         Compression   = 1
@@ -190,9 +218,28 @@ jobs:
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
         Compression   = 1
+
+        [ClickHouse AWS Unicode ZSTD]
+        Driver        = ClickHouse ODBC Driver (Unicode)
+        Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
+        Url           = https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?database=$TEST_DATABASE
+        Username      = default
+        Password      = ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
+        Compression   = 1
+
+        [ClickHouse AWS ANSI ZSTD]
+        Driver        = ClickHouse ODBC Driver (ANSI)
+        Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
+        Url           = https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?database=$TEST_DATABASE
+        Username      = default
+        Password      = ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
+        Compression   = 1
         EOF
 
-    # Run all tests except those that were run in "Test - unit tests" step.
     - name: Test - Run C++ integration tests
       working-directory: ${{ github.workspace }}/build
       env:
@@ -204,7 +251,19 @@ jobs:
         if [[ "${{ matrix.odbc_provider }}" == "iODBC" ]]; then
           export GTEST_FILTER="-PerformanceTest.*"
         fi
-        ctest --output-on-failure --build-config ${{ matrix.build_type }} -E '.*-ut.*'
+        ctest --output-on-failure --build-config ${{ matrix.build_type }} -E '(.*-ut.*|-dsn-[45]$)'
+
+    - name: Test - Run C++ integration tests in the Cloud
+      working-directory: ${{ github.workspace }}/build
+      if: ${{ matrix.build_type == 'Release' }}
+      env:
+        DSN: "ClickHouse DSN (ANSI)"
+        ODBCSYSINI: ""  # Must be set for `ODBCINSTINI` and `ODBCINI` to work
+        ODBCINSTINI: ${{ github.workspace }}/run/.odbcinst.ini
+        ODBCINI: ${{ github.workspace }}/run/.odbc.ini
+        GTEST_FILTER: -AuthenticationTest.PasswordEncoding:PerformanceTest*
+      run: |
+        ctest --output-on-failure --build-config ${{ matrix.build_type }} -R '-dsn-[45]'
 
     - name: Prepare Python dependencies
       working-directory: source/test
@@ -230,3 +289,15 @@ jobs:
         ODBCINI: ${{ github.workspace }}/run/.odbc.ini
       run: |
         pytest --log-level=DEBUG -v
+
+    - name: Drop Test Database
+      if: always() && env.TEST_DATABASE != ''
+      run: |
+        curl -X POST \
+          "https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?query=" \
+          -u "default:${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}" \
+          -d "select name from system.tables where database = '$TEST_DATABASE'"
+        curl -X POST \
+          "https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?query=" \
+          -u "default:${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}" \
+          -d "drop database if exists $TEST_DATABASE"
