--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -90,18 +90,28 @@ jobs:
         sudo ./clickhouse start
 
     - name: Configure
-      run: >
-        CC=${{ fromJSON('{"AppleClang": "cc", "Clang": "/usr/local/opt/llvm/bin/clang", "GCC": "$COMPILER_PATH/gcc-11"}')[matrix.compiler] }}
-        CXX=${{ fromJSON('{"AppleClang": "c++", "Clang": "/usr/local/opt/llvm/bin/clang++", "GCC": "$COMPILER_PATH/g++-11"}')[matrix.compiler] }}
-        cmake -S ${{ github.workspace }}/source -B ${{ github.workspace }}/build
-        -DCMAKE_POLICY_VERSION_MINIMUM=3.5
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DODBC_PROVIDER=${{ matrix.odbc_provider }}
-        -DICU_ROOT=/usr/local/opt/icu4c
-        -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl
-        -DCH_ODBC_RUNTIME_LINK_STATIC=${{ fromJSON('{"static-runtime": "ON", "dynamic-runtime": "OFF"}')[matrix.runtime_link] }}
-        -DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=${{ fromJSON('{"bundled-third-parties": "ON", "system-third-parties": "OFF"}')[matrix.third_parties] }}
-        -DTEST_DSN_LIST="ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI) ZSTD;ClickHouse DSN (Unicode) ZSTD"
+      run: |
+        dsn_list=(
+          "ClickHouse DSN (ANSI)"
+          "ClickHouse DSN (Unicode)"
+          "ClickHouse DSN (ANSI) ZSTD"
+          "ClickHouse DSN (Unicode) ZSTD"
+          "ClickHouse AWS ANSI ZSTD"
+          "ClickHouse AWS Unicode ZSTD"
+        )
+        dsn_string=$(IFS=';'; echo "${dsn_list[*]}")
+
+        CC=${{ fromJSON('{"AppleClang": "cc", "Clang": "/usr/local/opt/llvm/bin/clang", "GCC": "$COMPILER_PATH/gcc-11"}')[matrix.compiler] }} \
+        CXX=${{ fromJSON('{"AppleClang": "c++", "Clang": "/usr/local/opt/llvm/bin/clang++", "GCC": "$COMPILER_PATH/g++-11"}')[matrix.compiler] }} \
+        cmake -S ${{ github.workspace }}/source -B ${{ github.workspace }}/build \
+        -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
+        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+        -DODBC_PROVIDER=${{ matrix.odbc_provider }} \
+        -DICU_ROOT=/usr/local/opt/icu4c \
+        -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl \
+        -DCH_ODBC_RUNTIME_LINK_STATIC=${{ fromJSON('{"static-runtime": "ON", "dynamic-runtime": "OFF"}')[matrix.runtime_link] }} \
+        -DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=${{ fromJSON('{"bundled-third-parties": "ON", "system-third-parties": "OFF"}')[matrix.third_parties] }} \
+        -DTEST_DSN_LIST="$dsn_string" \
         -DBUILD_TESTING=YES
 
     - name: Build
@@ -113,7 +123,7 @@ jobs:
     - name: List artifacts
       run: |
         echo REF: ${{ github.ref }}
-        ls -lahR ${{ github.workspace }}/build
+        ls -lahR ${{ github.workspace }}/build/
 
     - name: Upload the artifacts
       # if:  ${{ matrix.compiler == 'AppleClang' && matrix.odbc_provider == 'iODBC' && matrix.build_type == 'Release' }}
@@ -122,15 +132,24 @@ jobs:
           name: clickhouse-odbc-macos-${{ matrix.compiler }}-${{ matrix.odbc_provider }}-${{ matrix.build_type }}
           path: ${{ github.workspace }}/build/clickhouse-odbc-*
 
-    - name: Test - Run unit tests
+    - name: Test - Run C++ unit tests
       working-directory: ${{ github.workspace }}/build
       run: ctest --output-on-failure --build-config ${{ matrix.build_type }} -R '.*-ut.*'
 
-    - name: Test - Run integration tests
-      working-directory: ${{ github.workspace }}/build
+    - name: Create Test Database
+      if: ${{ matrix.build_type == 'Release' }}
       run: |
-        export CLICKHOUSE_SERVER_IP=127.0.0.1
+        timestamp=$(date +%s)
+        database="test${timestamp}000_odbc_macos_${{ matrix.build_type }}"
+        echo "TEST_DATABASE=$database" >> $GITHUB_ENV
 
+        curl --fail-with-body -X POST \
+          "https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?query=" \
+          -u "default:${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}" \
+          -d "create database $database"
+
+    - name: Prepare ODBC ini configs
+      run: |
         export ODBCSYSINI=${{ github.workspace }}/run
         export ODBCINSTINI=.odbcinst.ini
         export ODBCINI=$ODBCSYSINI/.odbc.ini
@@ -171,21 +190,23 @@ jobs:
         [ClickHouse DSN (ANSI)]
         Driver        = ClickHouse ODBC Driver (ANSI)
         Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
-        Url           = http://${CLICKHOUSE_SERVER_IP}
+        Url           = http://localhost:8123
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
+        Compression   = 0
 
         [ClickHouse DSN (Unicode)]
         Driver        = ClickHouse ODBC Driver (Unicode)
         Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
-        Url           = http://${CLICKHOUSE_SERVER_IP}
+        Url           = http://localhost:8123
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
+        Compression   = 0
 
         [ClickHouse DSN (ANSI) ZSTD]
         Driver        = ClickHouse ODBC Driver (ANSI)
         Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
-        Url           = http://${CLICKHOUSE_SERVER_IP}
+        Url           = http://localhost:8123
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
         Compression   = 1
@@ -193,14 +214,56 @@ jobs:
         [ClickHouse DSN (Unicode) ZSTD]
         Driver        = ClickHouse ODBC Driver (Unicode)
         Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
-        Url           = http://${CLICKHOUSE_SERVER_IP}
+        Url           = http://localhost:8123
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
+        Compression   = 1
+
+        [ClickHouse AWS Unicode ZSTD]
+        Driver        = ClickHouse ODBC Driver (Unicode)
+        Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
+        Url           = https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?database=$TEST_DATABASE
+        Username      = default
+        Password      = ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
+        Compression   = 1
+
+        [ClickHouse AWS ANSI ZSTD]
+        Driver        = ClickHouse ODBC Driver (ANSI)
+        Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
+        Url           = https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?database=$TEST_DATABASE
+        Username      = default
+        Password      = ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
         Compression   = 1
         EOF
 
-        # Run all tests except those that were run in "Test - unit tests" step.
-        ctest --output-on-failure --build-config ${{ matrix.build_type }} -E '.*-ut.*'
+    - name: Test - Run C++ integration tests
+      working-directory: ${{ github.workspace }}/build
+      env:
+        DSN: "ClickHouse DSN (ANSI)"
+        ODBCSYSINI: ""  # Must be set for `ODBCINSTINI` and `ODBCINI` to work
+        ODBCINSTINI: ${{ github.workspace }}/run/.odbcinst.ini
+        ODBCINI: ${{ github.workspace }}/run/.odbc.ini
+      run: |
+        if [[ "${{ matrix.odbc_provider }}" == "iODBC" ]]; then
+          export GTEST_FILTER="-PerformanceTest.*"
+        fi
+        ctest --output-on-failure --build-config ${{ matrix.build_type }} -E '(.*-ut.*|-dsn-[45]$)'
+
+    - name: Test - Run C++ integration tests in the Cloud
+      working-directory: ${{ github.workspace }}/build
+      if: ${{ matrix.build_type == 'Release' }}
+      env:
+        DSN: "ClickHouse DSN (ANSI)"
+        ODBCSYSINI: ""  # Must be set for `ODBCINSTINI` and `ODBCINI` to work
+        ODBCINSTINI: ${{ github.workspace }}/run/.odbcinst.ini
+        ODBCINI: ${{ github.workspace }}/run/.odbc.ini
+        GTEST_FILTER: -AuthenticationTest.PasswordEncoding:PerformanceTest*
+      run: |
+        ctest --output-on-failure --build-config ${{ matrix.build_type }} -R '.*-dsn-[45]'
 
     - name: Upload artifacts as release assets
       if: ${{ github.event_name == 'release' && matrix.build_type == 'Release' }}
@@ -211,3 +274,15 @@ jobs:
         overwrite: true
         tag: ${{ github.ref }}
         file_glob: true
+
+    - name: Drop Test Database
+      if: always() && env.TEST_DATABASE != ''
+      run: |
+        curl -X POST \
+          "https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?query=" \
+          -u "default:${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}" \
+          -d "select name from system.tables where database = '$TEST_DATABASE'"
+        curl -X POST \
+          "https://${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}:8443/?query=" \
+          -u "default:${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}" \
+          -d "drop database if exists $TEST_DATABASE"
