--- a/driver/platform/win/resource.rc
+++ b/driver/platform/win/resource.rc
@@ -50,23 +50,24 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 195, 253
+IDD_DIALOG1 DIALOGEX 0, 0, 265, 280
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Create data source for ClickHouse"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_DSN_NAME,78,12,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_DESCRIPTION,78,29,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_URL,78,46,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SERVER_HOST,78,92,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SERVER_PORT,78,110,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_DATABASE,78,128,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SSLMODE,78,146,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_USER,78,163,98,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_PASSWORD,78,181,98,14,ES_PASSWORD | ES_AUTOHSCROLL
-    EDITTEXT        IDC_TIMEOUT,78,199,98,14,ES_AUTOHSCROLL | ES_NUMBER
-    DEFPUSHBUTTON   "Ok",IDOK,126,229,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,18,229,50,14
+    EDITTEXT        IDC_DSN_NAME,78,12,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_DESCRIPTION,78,29,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_URL,78,46,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SERVER_HOST,78,92,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SERVER_PORT,78,110,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_DATABASE,78,128,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SSLMODE,78,146,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_USER,78,163,168,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_PASSWORD,78,181,168,14,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_TIMEOUT,78,199,168,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_COMPRESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,78,220,10,10
+    DEFPUSHBUTTON   "Ok",IDOK,196,256,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,18,256,50,14
     LTEXT           "Name:",IDC_STATIC,18,15,44,8
     LTEXT           "Description:",IDC_STATIC,18,32,44,8
     LTEXT           "URL:",IDC_STATIC,18,49,44,8
@@ -78,6 +79,7 @@ BEGIN
     LTEXT           "User:",IDC_STATIC,18,166,44,8
     LTEXT           "Password:",IDC_STATIC,18,184,44,8
     LTEXT           "Timeout:",IDC_STATIC,18,202,44,8
+    LTEXT           "Compression:",IDC_STATIC,18,220,44,8
 END
 
 
@@ -92,9 +94,9 @@ BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
         LEFTMARGIN, 5
-        RIGHTMARGIN, 190
+        RIGHTMARGIN, 260
         TOPMARGIN, 5
-        BOTTOMMARGIN, 243
+        BOTTOMMARGIN, 270
     END
 END
 #endif    // APSTUDIO_INVOKED
