--- a/driver/platform/win/resource.rc
+++ b/driver/platform/win/resource.rc
@@ -50,7 +50,7 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 265, 280
+IDD_DIALOG1 DIALOGEX 0, 0, 265, 298
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Create data source for ClickHouse"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -65,9 +65,10 @@ BEGIN
     EDITTEXT        IDC_USER,78,163,168,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_PASSWORD,78,181,168,14,ES_PASSWORD | ES_AUTOHSCROLL
     EDITTEXT        IDC_TIMEOUT,78,199,168,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_COMPRESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,78,220,10,10
-    DEFPUSHBUTTON   "Ok",IDOK,196,256,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,18,256,50,14
+    CONTROL         "",IDC_COMPRESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,220,10,10
+    CONTROL         "",IDC_SQL_COMPATIBILITY_SETTINGS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,238,10,10
+    DEFPUSHBUTTON   "Ok",IDOK,196,274,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,18,274,50,14
     LTEXT           "Name:",IDC_STATIC,18,15,44,8
     LTEXT           "Description:",IDC_STATIC,18,32,44,8
     LTEXT           "URL:",IDC_STATIC,18,49,44,8
@@ -80,6 +81,7 @@ BEGIN
     LTEXT           "Password:",IDC_STATIC,18,184,44,8
     LTEXT           "Timeout:",IDC_STATIC,18,202,44,8
     LTEXT           "Compression:",IDC_STATIC,18,220,44,8
+    LTEXT           "SQL Compatibility Settings:",IDC_STATIC,18,238,90,8
 END
 
 
