--- a/packaging/odbc.ini.sample
+++ b/packaging/odbc.ini.sample
@@ -43,6 +43,9 @@ Description = DSN (localhost) for ClickHouse ODBC Driver (ANSI)
 # AutoSessionId = off           # Auto generate session_id required to use some features of CH (e.g. TEMPORARY TABLE)
 # ClientName =                  # Sets additional information about the calling application. This string will be used as a prefix for the User-Agent header.
 # Compression = off             # Enables compression for data sent from ClickHouse to the driver
+# SqlCompatibilitySettings = off
+                                # Enables query settings such as `cast_keep_nullable` and `prefer_column_name_to_alias` that make
+                                # ClickHouse behave more like a traditional relational database.
 
 [ClickHouse DSN (Unicode)]
 Driver      = ClickHouse ODBC Driver (Unicode)
