--- a/driver/platform/config_cmake.h.in
+++ b/driver/platform/config_cmake.h.in
@@ -5,7 +5,7 @@
 #define VERSION_PATCH @PROJECT_VERSION_PATCH@
 #define VERSION_TWEAK @PROJECT_VERSION_TWEAK@
 #define VERSION_EXTRA ""
-#define VERSION_STRING "@PROJECT_VERSION@"
+#define VERSION_STRING "@PROJECT_VERSION@@CH_ODBC_VERSION_SUFFIX@"
 
 #define SYSTEM_STRING "@CMAKE_SYSTEM@"
 #define ODBC_PROVIDER "@ODBC_PROVIDER@"
